# ZZU.Py

./: CHANGELOG.md  NOTE.md  README.md  pyproject.toml  requirements.txt  zzupy.py
.github/workflows/: build-docs.yaml  ci.yaml  publish.yaml  release.yaml
docs/source/: conf.py  index.rst
zzupy/: __init__.py  api.py  ecard.py  exception.py  log.py  models.py  network.py  supwisdom.py  typing.py  utils.py
