[tool.poetry]
name = "zzupy"
version = "1.0.1"
description = "郑州大学移动校园的 Python API 封装 / An API wrapper for Zhengzhou University Mobile Campus written in Python."
authors = ["Illustar0 <me@illustar0.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://illustar0.github.io/ZZU.Py"
repository = "https://github.com/Illustar0/ZZU.Py"

[tool.poetry.dependencies]
python = "^3.8"
fake-useragent = "*"
gmalg = "*"
httpx = "*"
loguru = "*"
psutil = "*"
pycryptodome = "*"
typing-extensions = "*"
beautifulsoup4 = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "zzupy/__init__.py:__version__",
    "docs/source/conf.py:release",
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
build_command = "pip install poetry && poetry build"